--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "chai-json-schema": "^1.5.1",
     "mocha": "^8.3.2"
   },
   "dependencies": {
