--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha -exit"
+    "test": "mocha -exit",
+    "dev": "nodemon --delay 200ms index.js"
   },
   "author": "Leonard Struck",
   "license": "ISC",
@@ -13,7 +14,8 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "chai-json-schema": "^1.5.1",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "detect-mocha": "^0.1.0",
