--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "0.0.1",
   "description": "simple reconciliation service",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha -exit",
     "dev": "nodemon --delay 200ms index.js"
   },
   "author": "Leonard Struck",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "chai-json-schema": "^1.5.1",
-    "mocha": "^8.3.2",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "detect-mocha": "^0.1.0",
     "express": "^4.17.1"
   }
 }
