--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.3",
   "description": "My Electron application description",
   "main": ".webpack/main",
+  "typings": "./webpack/main",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -89,8 +90,11 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.54",
     "@electron-forge/publisher-github": "^6.0.0-beta.54",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/pure-render-decorator": "^0.2.28",
     "@types/react": "^17.0.3",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-dom": "^17.0.3",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
@@ -104,13 +108,17 @@
     "node-loader": "^1.0.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.2",
+    "ttf-loader": "^1.0.2",
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.42.0",
+    "@blueprintjs/popover2": "^0.4.0",
     "electron-squirrel-startup": "^1.0.0",
-    "evergreen-ui": "^5.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "update-electron-app": "^2.0.1"
   }
