--- a/package.json
+++ b/package.json
@@ -109,12 +109,14 @@
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.2",
     "ttf-loader": "^1.0.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.42.0",
     "@blueprintjs/popover2": "^0.4.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-storage": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
