added store for local config

--- a/package.json
+++ b/package.json
@@ -115,14 +115,18 @@
   "dependencies": {
     "@blueprintjs/core": "^3.42.0",
     "@blueprintjs/popover2": "^0.4.0",
+    "ajv": "^8.0.1",
+    "ajv-formats": "^2.0.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-storage": "^1.0.7",
+    "electron-store": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
+    "react-uuid": "^1.0.2",
     "update-electron-app": "^2.0.1"
   }
 }
