--- a/package.json
+++ b/package.json
@@ -96,13 +96,14 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.0.1",
     "copy-webpack-plugin": "6.4.1",
     "css-loader": "^4.2.1",
     "electron": "12.0.2",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-react": "^7.23.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
     "node-loader": "^1.0.1",
@@ -127,6 +128,7 @@
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "react-uuid": "^1.0.2",
+    "slugify": "^1.5.0",
     "update-electron-app": "^2.0.1"
   }
 }
