--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
       "plugin:@typescript-eslint/recommended",
       "plugin:react/recommended",
       "plugin:import/errors",
-      "plugin:import/warnings"
+      "plugin:import/warnings",
+      "plugin:import/typescript"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
