--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "module": "commonjs",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "baseUrl": ".",
+    "target": "ES5",
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
