--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [],
   "author": {
@@ -53,7 +54,11 @@
           }
         },
         {
-          "name": "@electron-forge/maker-zip"
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin",
+            "win32"
+          ]
         },
         {
           "name": "@electron-forge/maker-dmg",
@@ -101,6 +106,7 @@
     "copy-webpack-plugin": "6.4.1",
     "css-loader": "^4.2.1",
     "electron": "12.0.2",
+    "electron-builder": "^22.10.5",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-react": "^7.23.1",
@@ -119,11 +125,16 @@
     "@blueprintjs/select": "^3.15.9",
     "ajv": "^8.0.1",
     "ajv-formats": "^2.0.0",
+    "electron-debug": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-storage": "^1.0.7",
     "electron-store": "^7.0.2",
+    "electron-unhandled": "^3.0.2",
+    "mariadb": "^2.5.3",
     "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -132,6 +143,8 @@
     "react-uuid": "^1.0.2",
     "sequelize": "^6.6.2",
     "slugify": "^1.5.0",
+    "sqlite3": "^5.0.2",
+    "tedious": "^11.0.6",
     "update-electron-app": "^2.0.1"
   }
 }
