--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
 		"react-hot-loader": "^4.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
+		"slugify": "^1.5.0",
 		"webpack": "^5.28.0"
 	}
 }
