--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"package": "electron-forge package",
 		"make": "electron-forge make",
 		"publish": "electron-forge publish",
-		"lint": "echo \"No linting configured\""
+		"lint": "echo \"No linting configured\"",
+		"postinstall": "electron-builder install-app-deps"
 	},
 	"keywords": [],
 	"author": {
@@ -101,23 +102,34 @@
 		"babel-loader": "^8.2.2",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.2",
+		"electron-builder": "^22.10.5",
+		"electron-devtools-installer": "^3.1.1",
 		"node-loader": "^1.0.1",
 		"style-loader": "^1.2.1"
 	},
 	"dependencies": {
 		"@blueprintjs/core": "^3.42.0",
 		"@blueprintjs/popover2": "^0.4.0",
+		"@blueprintjs/select": "^3.15.9",
 		"ajv": "^8.0.3",
 		"ajv-formats": "^2.0.1",
+		"electron-is-dev": "^2.0.0",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
+		"mariadb": "^2.5.3",
+		"mysql2": "^2.2.5",
+		"pg": "^8.5.1",
+		"pg-hstore": "^2.3.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-hot-loader": "^4.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
+		"sequelize": "^6.6.2",
 		"slugify": "^1.5.0",
+		"sqlite3": "^5.0.2",
+		"tedious": "^11.0.6",
 		"webpack": "^5.28.0"
 	}
 }
