--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"@electron-forge/maker-squirrel": "^6.0.0-beta.54",
 		"@electron-forge/maker-zip": "^6.0.0-beta.54",
 		"@electron-forge/plugin-webpack": "6.0.0-beta.54",
+		"@electron-forge/publisher-github": "^6.0.0-beta.54",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@svgr/webpack": "^5.5.0",
 		"babel-loader": "^8.2.2",
