--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
 		"@blueprintjs/core": "^3.42.0",
 		"@blueprintjs/popover2": "^0.4.0",
 		"@blueprintjs/select": "^3.15.9",
+		"@blueprintjs/table": "^3.8.27",
 		"@electron-forge/maker-dmg": "^6.0.0-beta.54",
 		"ajv": "^8.0.3",
 		"ajv-formats": "^2.0.1",
