--- a/package.json
+++ b/package.json
@@ -94,6 +94,11 @@
 							"config": "./webpack.renderer.config.js",
 							"entryPoints": [
 								{
+									"html": "./src/reconc/index.html",
+									"js": "./src/reconc/renderer.js",
+									"name": "reconc"
+								},
+								{
 									"html": "./src/index.html",
 									"js": "./src/renderer.js",
 									"name": "main_window"
