--- a/package.json
+++ b/package.json
@@ -121,7 +121,6 @@
 		"babel-loader": "^8.2.2",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.2",
-		"electron-devtools-installer": "^3.1.1",
 		"electron-rebuild": "^2.3.5",
 		"node-loader": "^1.0.2",
 		"style-loader": "^1.2.1"
@@ -138,6 +137,7 @@
 		"electron-builder": "^22.10.5",
 		"electron-config": "^2.0.0",
 		"electron-log": "^4.3.2",
+		"electron-redux-devtools": "^0.3.4",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
 		"fs-extra": "^9.1.0",
@@ -149,8 +149,11 @@
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-hot-loader": "^4.13.0",
+		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.6.2",
 		"slugify": "^1.5.0",
 		"sqlite3": "^5.0.2",
