--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
 		"@electron-forge/plugin-webpack": "6.0.0-beta.54",
 		"@electron-forge/publisher-github": "^6.0.0-beta.54",
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
 		"@svgr/webpack": "^5.5.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^4.2.1",
