--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-hot-loader": "^4.13.0",
+		"react-lottie-segments": "^1.4.9",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
