--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
 		"fs-extra": "^9.1.0",
+		"lottie-react": "^2.1.0",
 		"mariadb": "^2.5.3",
 		"mysql2": "^2.2.5",
 		"pg": "^8.5.1",
@@ -150,7 +151,6 @@
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-hot-loader": "^4.13.0",
-		"react-lottie-segments": "^1.4.9",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
