--- a/package.json
+++ b/package.json
@@ -141,7 +141,11 @@
 		"electron-redux-devtools": "^0.3.4",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
+		"fastify": "^3.14.2",
+		"fastify-formbody": "^5.0.0",
 		"fs-extra": "^9.1.0",
+		"fuse.js": "^6.4.6",
+		"jsrender": "^1.0.11",
 		"lottie-react": "^2.1.0",
 		"mariadb": "^2.5.3",
 		"mysql2": "^2.2.5",
@@ -160,6 +164,7 @@
 		"slugify": "^1.5.0",
 		"sqlite3": "^5.0.2",
 		"tedious": "^11.0.6",
-		"webpack": "^5.28.0"
+		"webpack": "^5.28.0",
+		"yargs": "^16.2.0"
 	}
 }
