--- a/package.json
+++ b/package.json
@@ -141,13 +141,13 @@
 		"electron-redux-devtools": "^0.3.4",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
-		"fastify": "^3.14.2",
-		"fastify-formbody": "^5.0.0",
+		"express": "^4.17.1",
 		"fs-extra": "^9.1.0",
 		"fuse.js": "^6.4.6",
 		"jsrender": "^1.0.11",
 		"lottie-react": "^2.1.0",
 		"mariadb": "^2.5.3",
+		"morgan": "^1.10.0",
 		"mysql2": "^2.2.5",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
