--- a/package.json
+++ b/package.json
@@ -141,7 +141,8 @@
 		"electron-redux-devtools": "^0.3.4",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^7.0.2",
-		"express": "^4.17.1",
+		"fastify": "^3.14.2",
+		"fastify-formbody": "^5.0.0",
 		"fs-extra": "^9.1.0",
 		"fuse.js": "^6.4.6",
 		"jsrender": "^1.0.11",
