--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"productName": "reconcIsle",
 	"version": "0.0.4",
 	"description": "My Electron application description",
-	"main": ".webpack/main",
+	"main": ".webpack/main/main",
 	"scripts": {
 		"start": "NODE_ENV=development electron-forge start",
 		"rebuild": "./node_modules/.bin/electron-rebuild -f",
@@ -27,8 +27,6 @@
 		"forge": {
 			"packagerConfig": {
 				"asar": true,
-				"icon": "./src/app/assets/icon/icon.icns",
-				"app-bundle-id": "com.leonardstruck.reconcisle",
 				"osxSign": {
 					"hardened-runtime": true,
 					"gatekeeper-assess": false,
@@ -38,7 +36,9 @@
 				"osxNotarize": {
 					"appleId": "leonard@blockform.at",
 					"appleIdPassword": "@keychain:Application Loader: leonard@blockform.at"
-				}
+				},
+				"icon": "./src/app/assets/icon/icon.icns",
+				"app-bundle-id": "com.leonardstruck.reconcisle"
 			},
 			"publishers": [
 				{
@@ -119,7 +119,9 @@
 		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
 		"@svgr/webpack": "^5.5.0",
+		"@types/electron-config": "^3.2.2",
 		"babel-loader": "^8.2.2",
+		"copy-webpack-plugin": "6.4.1",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.2",
 		"electron-rebuild": "^2.3.5",
@@ -143,12 +145,11 @@
 		"electron-store": "^7.0.2",
 		"fastify": "^3.14.2",
 		"fastify-formbody": "^5.0.0",
-		"fs-extra": "^9.1.0",
+		"fs-extra": "8.1.0",
 		"fuse.js": "^6.4.6",
 		"jsrender": "^1.0.11",
 		"lottie-react": "^2.1.0",
 		"mariadb": "^2.5.3",
-		"morgan": "^1.10.0",
 		"mysql2": "^2.2.5",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
@@ -165,7 +166,7 @@
 		"slugify": "^1.5.0",
 		"sqlite3": "^5.0.2",
 		"tedious": "^11.0.6",
-		"webpack": "^5.28.0",
+		"webpack": "^5.32.0",
 		"yargs": "^16.2.0"
 	}
 }
