--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "reconcisle",
 	"productName": "reconcIsle",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "My Electron application description",
-	"main": ".webpack/main/main",
+	"main": ".webpack/main/",
 	"scripts": {
 		"start": "NODE_ENV=development electron-forge start",
 		"rebuild": "./node_modules/.bin/electron-rebuild -f",
@@ -26,16 +26,17 @@
 	"config": {
 		"forge": {
 			"packagerConfig": {
-				"asar": true,
+				"asar": {
+					"unpack": [
+						"**/.webpack/main/rec/**",
+						"**/.webpack/main/node_modules/**"
+					]
+				},
 				"osxSign": {
 					"hardened-runtime": true,
 					"gatekeeper-assess": false,
 					"entitlements": "entitlements.plist",
 					"entitlements-inherit": "entitlements.plist"
-				},
-				"osxNotarize": {
-					"appleId": "leonard@blockform.at",
-					"appleIdPassword": "@keychain:Application Loader: leonard@blockform.at"
 				},
 				"icon": "./src/app/assets/icon/icon.icns",
 				"app-bundle-id": "com.leonardstruck.reconcisle"
@@ -116,16 +117,16 @@
 		"@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.54",
 		"@electron-forge/plugin-webpack": "6.0.0-beta.54",
 		"@electron-forge/publisher-github": "^6.0.0-beta.54",
-		"@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-		"@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
 		"@svgr/webpack": "^5.5.0",
 		"@types/electron-config": "^3.2.2",
+		"@vercel/webpack-asset-relocator-loader": "^1.3.0",
 		"babel-loader": "^8.2.2",
-		"copy-webpack-plugin": "6.4.1",
+		"copy-webpack-plugin": "^6.1.2",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.2",
 		"electron-rebuild": "^2.3.5",
 		"node-loader": "^1.0.2",
+		"raw-loader": "^4.0.2",
 		"style-loader": "^1.2.1"
 	},
 	"dependencies": {
@@ -153,14 +154,14 @@
 		"mysql2": "^2.2.5",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"prop-types": "^15.5.7",
+		"react": "^16.8.0",
+		"react-dom": "^16.8.0",
 		"react-helmet": "^6.1.0",
-		"react-hot-loader": "^4.13.0",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
 		"react-uuid": "^1.0.2",
-		"redux": "^4.0.5",
+		"redux": "^3.5.2",
 		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.6.2",
 		"slugify": "^1.5.0",
