--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
 		"lottie-react": "^2.1.0",
 		"mariadb": "^2.5.3",
 		"mysql2": "^2.2.5",
+		"open": "^8.0.5",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
 		"prop-types": "^15.5.7",
