--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "reconcisle",
 	"productName": "reconcIsle",
-	"version": "0.0.5",
+	"version": "0.0.1",
 	"description": "My Electron application description",
 	"main": ".webpack/main/",
 	"scripts": {
-		"start": "NODE_ENV=development electron-forge start",
+		"start": "cross-env NODE_ENV=development electron-forge start",
 		"rebuild": "./node_modules/.bin/electron-rebuild -f",
 		"package": "electron-forge package",
 		"make": "electron-forge make",
@@ -61,7 +61,8 @@
 				{
 					"name": "@electron-forge/maker-squirrel",
 					"config": {
-						"name": "reconcisle"
+						"name": "reconcIsle",
+						"authors": ""
 					}
 				},
 				{
@@ -127,6 +128,7 @@
 		"@vercel/webpack-asset-relocator-loader": "^1.3.0",
 		"babel-loader": "^8.2.2",
 		"copy-webpack-plugin": "^6.1.2",
+		"cross-env": "^7.0.3",
 		"css-loader": "^4.2.1",
 		"electron": "12.0.2",
 		"electron-rebuild": "^2.3.5",
