--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
 		"slugify": "^1.5.0",
 		"sqlite3": "^5.0.2",
 		"tedious": "^11.0.6",
+		"timeago-react": "^3.0.2",
 		"webpack": "^4.43.0",
 		"yargs": "^16.2.0"
 	}
