--- a/src/reconciliationService/package.json
+++ b/src/reconciliationService/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "reconciliationService",
-  "version": "1.0.0",
-  "main": "reconciliationService.js",
-  "license": "MIT",
-  "dependencies": {
-    "fastify": "^3.14.2",
-    "fastify-formbody": "^5.0.0",
-    "fuse.js": "^6.4.6"
-  }
+	"name": "reconciliationservice",
+	"version": "1.0.0",
+	"main": "reconciliationService.js",
+	"license": "MIT",
+	"dependencies": {
+		"fastify": "^3.14.2",
+		"fastify-formbody": "^5.0.0",
+		"fuse.js": "^6.4.6"
+	}
 }
